# yootube-shorts.app

./: .env.example  .gitattributes  .gitignore  alembic.ini  config.example.json  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: d9f03cf67452_initial_tables.py
src/core/: constants.py
src/core/config/: __init__.py  base.py
src/core/config/environments/: __init__.py  development.py  production.py  test.py
src/core/config/mixins/: __init__.py  options.py
src/domain/entities/: __init__.py  link_model.py  table_model.py
src/domain/protocols/brokers/: __init__.py  rabbitmq.py
src/domain/protocols/http/: __init__.py  adapter.py
src/domain/protocols/stores/: __init__.py  base.py  mysql.py  redis.py
src/domain/types/_types/common/: __init__.py  config.py  model.py
src/domain/types/_types/options/: __init__.py  auth.py  enigne.py  openapi.py  service.py  telegram.py
src/domain/types/_types/source/: __init__.py  json_config.py
src/domain/types/enums/account/: __init__.py  credentials.py
src/domain/types/enums/common/: __init__.py  app_mode.py  engine_type.py  request_method.py  service_endpoint.py  service_type.py
src/domain/types/enums/user/: __init__.py  event.py  generation.py  role.py
src/infrastructure/clients/common/http/: __init__.py  base.py  executor.py
src/infrastructure/stores/common/: __init__.py  base.py
src/infrastructure/stores/mysql/: engine.py  repository.py
src/infrastructure/stores/redis/: engine.py  repository.py
src/infrastructure/utils/: __init__.py  token_provider.py  token_retry.py
(+56 files in other folders)
