[project]
name = "youtube-shorts-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "black>=26.1.0",
    "fastapi>=0.129.0",
    "faststream>=0.6.6",
    "gunicorn>=25.1.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "redis>=7.2.0",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
